--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -27,56 +27,54 @@
 	<div class="top-brands">
 		<div class="container">
 		<h2>Special offers</h2>
-							<div class="container-fluid agile-tp">
-								<p class="w3l-ad" style="color:">
-									We have pulled together our advertised offers into one place, so you won't miss out on any great deal.
-								</p>
-							</div>
-							<div class="agile_top_brands_grids">
-								<div class="col-md-6 col-md-offset-3">
-									<div class="row">
-					{{# each products }}
-					{{# each this }}
-            <div class="card">
-                <div class="card-image">
-                    <img class="img-responsive" src="images/ankara1.jpg">
-                </div><!-- card image -->
-                <div class="card-content">
-                    <span class="card-title">{{ this.title }}</span>                    
-                    <button type="button" id="show" class="btn btn-tertiary pull-right" aria-label="Left Align">
-                    	  <strong>More Info</strong>
-                        {{!-- <i class="fa fa-ellipsis-v"></i> --}}
-                    </button>
-                </div><!-- card content -->
-                <div class="card-action">
-                    
-                    <a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
-										<a href="#" target="new_blank">Cloth</a>
-										<a href="#" target="new_blank">Body Accessory</a>
-										<a href="#" target="new_blank">Ankara</a>     
-                </div><!-- card actions -->
-                <div class="card-reveal">
-                    <span class="card-title">Card Title</span> 
-										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-											<span aria-hidden="true">×</span>
-										</button>
-                    <p>
-											 {{ this.description }}
-											 Here is some more information about this product that is only revealed once clicked on.
-											 {{this.email}},{{this.price}}
-										</p>
-                </div><!-- card reveal -->
-            </div>
-							{{/each}}
-							{{/each}}
+			<div class="container-fluid agile-tp">
+			  <p class="w3l-ad" style="color:">
+					We have pulled together our advertised offers into one place, so you won't miss out on any great deal.
+				</p>
+			</div>
+			<div class="agile_top_brands_grids">
+				<div class="col-md-6 col-md-offset-3">
+					<div class="row">
+						{{# each products }}
+							{{# each this }}
+									<div class="card col-md-4">
+										<div class="card-image">
+											<img class="img-responsive" src="images/ankara1.jpg">
+										</div><!-- card image -->
+										<div class="card-content">
+											<span class="card-title">{{ this.title }}</span>                    
+											<button type="button" id="show" class="btn btn-tertiary pull-right" aria-label="Left Align">
+												<strong>More Info</strong>
+												{{!-- <i class="fa fa-ellipsis-v"></i> --}}
+											</button>
+										</div><!-- card content -->
+										<div class="card-action">
+													<a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
+													<a href="#" target="new_blank">Cloth</a>
+													<a href="#" target="new_blank">Body Accessory</a>
+													<a href="#" target="new_blank">Ankara</a>     
+										</div><!-- card actions -->
+										<div class="card-reveal">
+											<span class="card-title">Card Title</span> 
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">×</span>
+											</button>
+											<p>
+												{{ this.description }}
+												Here is some more information about this product that is only revealed once clicked on.
+												{{this.price}}
+											</p>
+										</div><!-- card reveal -->
+									</div>
+								{{/each}}
+						{{/each}}
 							</div>
         </div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
+						</div>
 						<!-- SECOND TAB -->
-		</div>
-	</div>
 <!-- //top-brands -->
 
 
